# freekill-asio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  freekill.server.config.json.example
.github/workflows/: build-aarch64.yml  build-amd64.yml  build-armhf.yml  build-armv7.yml  build-loongarch64.yml  build-riscv64.yml  build-x86.yml
distro/docker/: Dockerfile
distro/static-build/: README.md  alpine-build.sh  alpine_static.cmake  freekill-asio
server/: init.sql
src/: CMakeLists.txt  main.cpp  pch.h
src/core/: c-wrapper.cpp  c-wrapper.h  packman.cpp  packman.h  util.cpp  util.h
src/network/: client_socket.cpp  client_socket.h  http_listener.cpp  http_listener.h  router.cpp  router.h  server_socket.cpp  server_socket.h
src/server/: server.cpp  server.h
src/server/admin/: shell.cpp  shell.h
src/server/gamelogic/: roomthread.cpp  roomthread.h  rpc-dispatchers.cpp  rpc-dispatchers.h
src/server/room/: lobby.cpp  lobby.h  room.cpp  room.h  room_manager.cpp  room_manager.h  roombase.cpp  roombase.h
src/server/rpc-lua/: jsonrpc.cpp  jsonrpc.h  rpc-lua.cpp  rpc-lua.h
src/server/user/: auth.cpp  auth.h  player.cpp  player.h  user_manager.cpp  user_manager.h
